[package]
name = "specdown"
version = "1.2.108"
description = "A tool to test markdown files and drive development from documentation."
repository = "https://github.com/specdown/specdown"
readme = "README.md"
license = "Apache-2.0"
authors = [ "Tom Oram <me@tomoram.io>" ]
edition = "2018"
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::testing"
]
keywords = [ "markdown", "testing", "bdd", "tdd", "documentation" ]

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
clap_derive = "4.1.8"
clap_complete_command = "0.6.1"
crossterm = "0.28.1"
comrak = "0.35.0"
nom = "7.1.3"
termdiff = "3.1.4"
strip-ansi-escapes = "0.2.0"
shell-words = "1.1.0"
tempfile = "3.17.0"
thiserror = "2.0.11"
time = "0.3.37"

[dev-dependencies]
assert_cmd = "2.0.16"
indoc = "2.0.5"
maplit = "1.0.2"
tempfile = "3.17.0"
